--- a/columns/index.html
+++ b/columns/index.html
@@ -144,28 +144,28 @@ mark {
 <li>20231130 - El fantasma vuelve</li>
 <li>20231116 - El rigor de la justicia</li>
 <li>20231110 - La prueba del pato</li>
-<li>20231107 - La guinda de la torta</li>
+<li>20231108 - La guinda de la torta</li>
 <li>20231103 - Los gestos cuestan caro</li>
-<li>20231030 - ¿La segunda es la vencida?</li>
+<li>20231031 - ¿La segunda es la vencida?</li>
 <li>20231026 - Reputación y confianza</li>
-<li>20230928 - Comenzar de cero</li>
+<li>20230929 - Comenzar de cero</li>
 <li>20230927 - El tiempo es juez</li>
 <li>20230922 - Sentido común</li>
-<li>20230915 - Dos derechas</li>
+<li>20230916 - Dos derechas</li>
 <li>20230912 - El doce</li>
 <li>20230908 - El eterno retorno</li>
 <li>20230817 - Un leve ajuste</li>
 <li>20230802 - El borrador</li>
-<li>20230728 - El retroceso</li>
+<li>20230728 - Anhelo de pasado</li>
 <li>20230721 - Dos posibilidades</li>
 <li>20230713 - Politicamente correcto</li>
 <li>20230707 - La mancha</li>
 <li>20230705 - El escándalo</li>
 <li>20230624 - Superioridad moral</li>
 <li>20230614 - Construir y proponer</li>
-<li>20230607 - Noche y día</li>
+<li>20230608 - Noche y día</li>
 <li>20230602 - Otro país</li>
-<li>20230525 - Todo lo contrario</li>
+<li>20230525 - Problemas de forma</li>
 <li>20230509 - Retribución moral</li>
 <li>20230508 - Victoria histórica</li>
 <li>20230506 - Legitimas dudas</li>
@@ -173,35 +173,35 @@ mark {
 <li>20230422 - Soluciones a cuentagotas</li>
 <li>20230420 - Nuevo rumbo</li>
 <li>20230414 - Símbolo de retroceso</li>
-<li>20230407 - Fracaso absoluto</li>
+<li>20230407 - El fracaso</li>
 <li>20230330 - Más vale tarde</li>
 <li>20230323 - Una casas de narcos</li>
 <li>20230311 - Moderación forzada</li>
 <li>20230309 - Grueso Error</li>
 <li>20230308 - Una bola de nieve</li>
 <li>20230307 - El respeto</li>
-<li>20230223 - Los buenos</li>
-<li>20230221 - La frontera</li>
+<li>20230223 - Del lado de los buenos</li>
+<li>20230222 - La frontera</li>
 <li>20230203 - Intención versus ejecución</li>
 <li>20230127 - Trapos al sol</li>
-<li>20230124 - Chambonada</li>
-<li>20230114 - Ajuste de cuentas</li>
+<li>20230125 - Chambonadas</li>
+<li>20230114 - Pasada de cuenta</li>
 <li>20230110 - Espectáculo político</li>
-<li>20230104 - La demanda es corto plazo</li>
+<li>20230105 - Demandas a corto plazo</li>
 <li>20221231 - Incentivo a la violencia</li>
-<li>20221228 - Las funas</li>
-<li>20221224 - Puesta en escena</li>
+<li>20221228 - Más que funa</li>
+<li>20221224 - Una puesta en escena</li>
 <li>20221220 - Oportunidad perdida</li>
 <li>20221214 - Todo lo contrario</li>
 <li>20221207 - Sin salida</li>
 <li>20221121 - Todo para nada</li>
 <li>20221116 - Escalada de violencia</li>
-<li>20221114 - Parisi y el PDG</li>
+<li>20221114 - Cinco ideas para entender el punto de quiebre que enfrenta el PDG</li>
 <li>20221110 - Partido circunstancial</li>
-<li>20221107 - La victoria de Mirosevic</li>
+<li>20221108 - La victoria de Mirosevic</li>
 <li>20221105 - Un partido de irrelevancias</li>
 <li>20221029 - El proceso constituyente al congelador</li>
-<li>20221027 - Señal de debilidad</li>
+<li>20221027 - Lo urgente</li>
 <li>20220925 - La gira a Nueva York</li>
 <li>20220924 - Bien encaminados</li>
 <li>20220918 - Convencionales anónimos</li>
@@ -250,21 +250,21 @@ mark {
 <li>20220330 - La violencia</li>
 <li>20220325 - Impunidad</li>
 <li>20220323 - Favores</li>
-<li>20220318 - Responsabilidad fiscal</li>
+<li>20220318 - Responsabilidad</li>
 <li>20220318 - Mario Marcel</li>
-<li>20220316 - Dialogo</li>
-<li>20220312 - Una oportunidad</li>
+<li>20220316 - La lección en Ercilla</li>
+<li>20220312 - Luna de miel</li>
 <li>20220225 - Uno mas uno es cero</li>
 <li>20220223 - Una mala idea</li>
 <li>20220219 - Derecho a dignidad</li>
 <li>20220216 - La hora de la verdad</li>
 <li>20220210 - El peligro del Rechazo</li>
-<li>20220207 - Fin de una era</li>
-<li>20220206 - La lista de los subsecretarios</li>
+<li>20220207 - El fin de un ciclo político</li>
+<li>20220206 - Diez puntos para tener en cuenta sobre los futuros subsecretarios</li>
 <li>20220202 - El camino peruano</li>
 <li>20220130 - Diez claves del nuevo gabinete</li>
 <li>20220122 - Quiebre a la tradición</li>
-<li>20220106 - La novena es la vencida</li>
+<li>20220106 - Diez ideas para entender la elección de la nueva presidencia</li>
 <li>20211223 - Señales de moderación</li>
 <li>20211221 - Diez temas de la elección</li>
 <li>20211220 - Legitimidad</li>
@@ -272,19 +272,20 @@ mark {
 <li>20211211 - La ley del que grita más fuerte</li>
 <li>20211127 - Capital humano</li>
 <li>20211125 - Las raíces</li>
-<li>20211123 - Diez resultados de la elección</li>
+<li>20211123 - Doce hechos que dejan las cruciales elecciones de este domingo</li>
 <li>20211117 - Preferencias variables</li>
 <li>20211116 - Un debate incierto</li>
-<li>20211115 - Doce temas de la elección</li>
+<li>20211115 - Doce cosas en la que usted puede fijarse para la elección del 21 de noviembre</li>
 <li>20211113 - Compromiso irrestricto</li>
 <li>20211111 - La saña</li>
-<li>20211110 - Socialdemocracia</li>
-<li>20211105 - El estándar</li>
-<li>20211102 - Ganar por ganar</li>
+<li>20211110 - Valiente</li>
+<li>20211106 - El estándar</li>
+<li>20211103 - Ganar por ganar</li>
 <li>20211020 - Octubre contra Noviembre</li>
 <li>20211019 - Detener las banalidades</li>
-<li>20211013 - El fin justifica los medios</li>
-<li>20211012 - La gran tragedia</li>
+<li>20211014 - El fin justifica los medios</li>
+<li>20211013 - La gran tragedia</li>
+<li>20211001 - Una propuesta bajo el brazo</li>
 <li>20210929 - Demasiado tibio</li>
 <li>20210928 - La sospecha</li>
 <li>20210925 - Los incentivos</li>
@@ -322,7 +323,7 @@ mark {
 <li>20210215 - Luces y sombras</li>
 <li>20210126 - Frei Montalva</li>
 <li>20210123 - La contradicción de RN</li>
-<li>20210101 - Inconsecuencia</li>
+<li>20210126 - Por su memoria</li>
 <li>20201230 - El trabajo dignifica</li>
 <li>20201219 - En sus marcas</li>
 <li>20201216 - Gravedad extrema</li>
@@ -341,7 +342,7 @@ mark {
 <li>20200826 - La carreta delante de los bueyes</li>
 <li>20200820 - Modernizar con responsabilidad</li>
 <li>20200729 - La defensa</li>
-<li>20200723 - El plan</li>
+<li>20200724 - Cambio de estrategia</li>
 <li>20200721 - El gesto perfecto</li>
 <li>20200709 - Una oportunidad</li>
 <li>20200706 - Cambio de rumbo</li>
@@ -351,7 +352,7 @@ mark {
 <li>20200614 - La hora de convocar y escuchar</li>
 <li>20200612 - El informante</li>
 <li>20200609 - La belleza del debate</li>
-<li>20200604 - Buena decisión</li>
+<li>20200605 - Buena decisión</li>
 <li>20200530 - Llegó el momento</li>
 <li>20200527 - Con el viento a favor</li>
 <li>20200514 - El sheriff virtual</li>
@@ -364,7 +365,6 @@ mark {
 <li>20200307 - La mayoría silenciosa</li>
 <li>20200303 - Presunción de inocencia</li>
 <li>20200229 - El gabinete</li>
-<li>20200126 - La sombra de Frei</li>
 <li>20200124 - Impuesto Millennial</li>
 <li>20191216 - El poder real de los alcaldes</li>
 <li>20191206 - Carabineros</li>
@@ -388,8 +388,8 @@ mark {
 <li>20180730 - A favor de la eutanasia</li>
 <li>20180724 - El ministro pasapalabras</li>
 <li>20180719 - Respeto a un invitado</li>
-<li>20180712 - El taloó de Áquiles de Bachelet</li>
-<li>20180708 - Por que la oposicion esta desarticulada</li>
+<li>20180712 - El talón de Áquiles de Bachelet</li>
+<li>20180709 - Por qué la oposicion esta desarticulada</li>
 <li>20180619 - Orden en la casa</li>
 <li>20180618 - Falta lógica de coalición en la derecha</li>
 <li>20180615 - El grave error del senador</li>
@@ -414,16 +414,16 @@ mark {
 <li>20180406 - Una decisión apresurada</li>
 <li>20180403 - Mejor ser panelista que político</li>
 <li>20180328 - Adónde va ese tuiteo</li>
-<li>20180321 - Intolerancia en una universidad</li>
+<li>20180322 - Intolerancia en una universidad</li>
 <li>20180312 - Polos opuestos</li>
 <li>20180307 - Un saludo a la bandera</li>
 <li>20180227 - El trampolín político</li>
 <li>20180225 - Cómo se viene la mano con los ministros</li>
 <li>20180217 - Qué debe hacer el nuevo congreso</li>
 <li>20180124 - El ministro verde oliva</li>
-<li>20180121 - Posverdad y el Banco Mundial</li>
-<li>20180113 - Por qué Bachelet coopera con Piñera</li>
-<li>20180106 - El éxodo de Mariana</li>
+<li>20180122 - Posverdad y el Banco Mundial</li>
+<li>20180115 - Por qué Bachelet coopera con Piñera</li>
+<li>20180107 - El éxodo de Mariana</li>
 <li>20180102 - Los tres gabinetes de Piñera</li>
 </ul>
 
