--- a/lun/index.html
+++ b/lun/index.html
@@ -33,7 +33,7 @@ gap: 5px;
         display: flex;
       }
       .img-container img {
-        width: 33%;
+        width: 10%;
         padding: 5px;
       }
 
@@ -89,20 +89,15 @@ gap: 5px;
 <h3 id="on-the-front-page">Las Últimas Noticias</h3>
 
 <div class="img-container">
-    <img src="/img/20231110%20-%20LUN.png">
-    <img src="/img/20240207%20-%20LUN.png">
+    <img src="/img/lun/20240508.jpeg">
+    <img src="/img/lun/20240508.jpeg">
+    <img src="/img/lun/20240508.jpeg">
 </div>
 
 <div class="img-container">
-    <img src="/img/20210719%20-%20LUN.png">
-    <img src="/img/20211122%20-%20LUN.png">
-    <img src="/img/20211220%20-%20LUN.png">
-</div>
-
-<div class="img-container">
-    <img src="/img/20220905%20-%20LUN.png">
-    <img src="/img/20210720%20-%20LUN.png">
-    <img src="/img/20210719%20-%20LUN.png">
+    <img src="/img/lun/20240508.jpeg">   
+    <img src="/img/lun/20240508.jpeg">
+    <img src="/img/lun/20240508.jpeg">
 </div>
 
 
