--- a/lun/index.html
+++ b/lun/index.html
@@ -79,7 +79,7 @@ gap: 5px;
 <div class="container">
 
 
-<h2 id="on-the-front-page">On the front page</h2>
+<h2 id="on-the-front-page">Columns in LUN</h2>
 <hr>
 <p><em>For a collection of my comments in the international press, click <a href="https://kennethbunker.github.io/press">here</a>. For a collection of my comments in the Chilean press, click <a href="https://kennethbunker.github.io/prensa">here</a>.</em></p>
 <hr>
@@ -89,16 +89,16 @@ gap: 5px;
 <h3 id="on-the-front-page">Las Últimas Noticias</h3>
 
 <div class="img-container">
+    <img src="/img/lun/20240521.jpeg">
     <img src="/img/lun/20240508.jpeg">
-    <img src="/img/lun/20240508.jpeg">
-    <img src="/img/lun/20240508.jpeg">
-    <img src="/img/lun/20240508.jpeg">
-    <img src="/img/lun/20240508.jpeg">
-    <img src="/img/lun/20240508.jpeg">
-    <img src="/img/lun/20240508.jpeg">
-    <img src="/img/lun/20240508.jpeg">
-    <img src="/img/lun/20240508.jpeg">
-    <img src="/img/lun/20240508.jpeg">
+    <img src="/img/lun/20240423.jpeg">
+    <img src="/img/lun/20240419.jpeg">
+    <img src="/img/lun/20240418.jpeg">
+    <img src="/img/lun/20240406.jpeg">
+    <img src="/img/lun/20240329.jpeg">
+    <img src="/img/lun/20240328.jpeg">
+    <img src="/img/lun/20240327.jpeg">
+    <img src="/img/lun/20240316.jpeg">
 </div>
 
 <div class="img-container">
