--- a/lun/index.html
+++ b/lun/index.html
@@ -13,7 +13,7 @@
    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Covers - Kenneth Bunker</title>
+    <title>LUN - Kenneth Bunker</title>
     <meta name="description" content="Academic, Consultant, Columnist">
     <meta name="author" content='Kenneth Bunker'>
 
@@ -87,6 +87,137 @@ gap: 5px;
 
 
 <h3 id="on-the-front-page">Las Últimas Noticias</h3>
+
+
+<div class="img-container">
+<img src="/img/lun/20240418.jpeg">
+<img src="/img/lun/20240419.jpeg">
+<img src="/img/lun/20240423.jpeg">
+<img src="/img/lun/20240508.jpeg">
+<img src="/img/lun/20240521.jpeg">
+</div>
+
+<div class="img-container">
+<img src="/img/lun/20240131.jpeg">
+<img src="/img/lun/20240202.jpeg">
+<img src="/img/lun/20240207.jpeg">
+<img src="/img/lun/20240305.jpeg">
+<img src="/img/lun/20240308.jpeg">
+<img src="/img/lun/20240316.jpeg">
+<img src="/img/lun/20240327.jpeg">
+<img src="/img/lun/20240328.jpeg">
+<img src="/img/lun/20240329.jpeg">
+<img src="/img/lun/20240406.jpeg">
+</div>
+
+<div class="img-container">
+<img src="/img/lun/20231110.jpeg">
+<img src="/img/lun/20231116.jpeg">
+<img src="/img/lun/20231130.jpeg">
+<img src="/img/lun/20231208.jpeg">
+<img src="/img/lun/20231214.jpeg">
+<img src="/img/lun/20231216.jpeg">
+<img src="/img/lun/20231218.jpeg">
+<img src="/img/lun/20231219.jpeg">
+<img src="/img/lun/20231220.jpeg">
+<img src="/img/lun/20240126.jpeg">
+</div>
+
+<div class="img-container">
+<img src="/img/lun/20230908.jpeg">
+<img src="/img/lun/20230912.jpeg">
+<img src="/img/lun/20230916.jpeg">
+<img src="/img/lun/20230922.jpeg">
+<img src="/img/lun/20230927.jpeg">
+<img src="/img/lun/20230929.jpeg">
+<img src="/img/lun/20231026.jpeg">
+<img src="/img/lun/20231031.jpeg">
+<img src="/img/lun/20231103.jpeg">
+<img src="/img/lun/20231108.jpeg">
+</div>
+
+<div class="img-container">
+<img src="/img/lun/20230608.jpeg">
+<img src="/img/lun/20230614.jpeg">
+<img src="/img/lun/20230624.jpeg">
+<img src="/img/lun/20230705.jpeg">
+<img src="/img/lun/20230707.jpeg">
+<img src="/img/lun/20230713.jpeg">
+<img src="/img/lun/20230721.jpeg">
+<img src="/img/lun/20230728.jpeg">
+<img src="/img/lun/20230802.jpeg">
+<img src="/img/lun/20230817.jpeg">
+</div>
+
+<div class="img-container">
+<img src="/img/lun/20230407.jpeg">
+<img src="/img/lun/20230414.jpeg">
+<img src="/img/lun/20230420.jpeg">
+<img src="/img/lun/20230422.jpeg">
+<img src="/img/lun/20230429.jpeg">
+<img src="/img/lun/20230506.jpeg">
+<img src="/img/lun/20230508.jpeg">
+<img src="/img/lun/20230509.jpeg">
+<img src="/img/lun/20230525.jpeg">
+<img src="/img/lun/20230602.jpeg">
+</div>
+
+
+
+<div class="img-container">
+<img src="/img/lun/20230127.jpeg">
+<img src="/img/lun/20230203.jpeg">
+<img src="/img/lun/20230222.jpeg">
+<img src="/img/lun/20230223.jpeg">
+<img src="/img/lun/20230307.jpeg">
+<img src="/img/lun/20230308.jpeg">
+<img src="/img/lun/20230309.jpeg">
+<img src="/img/lun/20230311.jpeg">
+<img src="/img/lun/20230323.jpeg">
+<img src="/img/lun/20230330.jpeg">
+</div>
+
+
+<div class="img-container">
+<img src="/img/lun/20221207.jpeg">
+<img src="/img/lun/20221214.jpeg">
+<img src="/img/lun/20221220.jpeg">
+<img src="/img/lun/20221224.jpeg">
+<img src="/img/lun/20221228.jpeg">
+<img src="/img/lun/20221231.jpeg">
+<img src="/img/lun/20230105.jpeg">
+<img src="/img/lun/20230110.jpeg">
+<img src="/img/lun/20230114.jpeg">
+<img src="/img/lun/20230125.jpeg">
+</div>
+
+
+<div class="img-container">
+<img src="/img/lun/20220918.jpeg">
+<img src="/img/lun/20220924.jpeg">
+<img src="/img/lun/20220925.jpeg">
+<img src="/img/lun/20221027.jpeg">
+<img src="/img/lun/20221105.jpeg">
+<img src="/img/lun/20221108.jpeg">
+<img src="/img/lun/20221110.jpeg">
+<img src="/img/lun/20221114.jpeg">
+<img src="/img/lun/20221116.jpeg">
+<img src="/img/lun/20221121.jpeg">
+</div>
+
+
+<div class="img-container">
+<img src="/img/lun/20220818.jpeg">
+<img src="/img/lun/20220825.jpeg">
+<img src="/img/lun/20220826.jpeg">
+<img src="/img/lun/20220828.jpeg">
+<img src="/img/lun/20220901.jpeg">
+<img src="/img/lun/20220905.jpeg">
+<img src="/img/lun/20220907.jpeg">
+<img src="/img/lun/20220909.jpeg">
+<img src="/img/lun/20220914.jpeg">
+<img src="/img/lun/20220916.jpeg">
+</div>
 
 
 <div class="img-container">
