--- a/lun/index.html
+++ b/lun/index.html
@@ -31,6 +31,7 @@ gap: 5px;
 
       .img-container {
         display: flex;
+        text-align: left; /* Add this line */
       }
       .img-container img {
         width: 10%;
