--- a/columns/index.html
+++ b/columns/index.html
@@ -119,6 +119,8 @@ mark {
 <hr>
 <ul>
 
+<p><em>Check out the prints!<a href="https://kennethbunker.github.io/lun">here</a>.</em></p>
+
 <li>20240508 - Punto de inflexión</li>  
 <li>20240423 - El torpedo</li>  
 <li>20240419 - La pelota al piso</li>  
