--- a/lun/index.html
+++ b/lun/index.html
@@ -96,6 +96,7 @@ gap: 5px;
 <img src="/img/lun/20240423.jpeg">
 <img src="/img/lun/20240508.jpeg">
 <img src="/img/lun/20240521.jpeg">
+<img src="/img/lun/20240525.jpeg">
 </div>
 
 <div class="img-container">
