--- a/columns/index.html
+++ b/columns/index.html
@@ -115,7 +115,7 @@ mark {
 <hr>
 <ul>
 <h2 id="las-ultimas-noticias">Las Últimas Noticias</h2>
-<p><a href="https://www.lun.com"><em>Las Últimas Noticias</em></a></p>
+<p><a href="https://www.lun.com"><em>Las Últimas Noticias</em></a><em> [IN PRINT]<a href="https://kennethbunker.github.io/lun">here</a></p>
 <hr>
 <ul>
 
