--- a/columns/index.html
+++ b/columns/index.html
@@ -119,6 +119,9 @@ mark {
 <hr>
 <ul>
 
+<li>20240525 - Dos estilos</li>
+<li>20240521 - Fin al lanza internacional </li>
+<li>20240517 - Desestabilizar para avanzar</li>
 <li>20240508 - Punto de inflexión</li>  
 <li>20240423 - El torpedo</li>  
 <li>20240419 - La pelota al piso</li>  
@@ -444,6 +447,8 @@ mark {
 <p><a href="https://www.ex-ante.cl"><em>Ex-Ante</em></a></p>
 <hr>
 <ul>
+<li>20240524 - Todas las cartas sobre la mesa, cerrar los ojos y esperar el impacto</li>
+<li>20240517 - Epifanía de un gobierno que se acaba</li>
 <li>20240510 - Incentivos y magia en el ciclo económico</li>
 <li>20240503 - Orbitario del perro matapacos: Un legado de división</li>
 <li>20240501 - ¿Por qué es intocable el refugio de delincuentes de Temucuicui y las autoridades no actúan?</li>
