--- a/index.html
+++ b/index.html
@@ -112,7 +112,9 @@ mark {
 <figure class="avatar">
     <img src="https://kennethbunker.github.io/me.png"/> 
 </figure>
-<p>I am an academic, a consultant and a columnist. I am an associate professor and director of the Democracy and Government Lab at the Economics Department of San Sebastian University. I also contribute to two organizations that provide discrete, reliable solutions to investors, stakeholders and politicians worldwide. I regularly comment on current affairs.</p>
+<p>I am an academic, a consultant and a columnist. I am an associate professor and director of the Democracy and Government Lab at the Economics Department of San Sebastian University. I also contribute to several organizations that provide discrete, reliable solutions to investors, stakeholders and politicians worldwide. I regularly comment on current affairs.</p>
+
+<p>Click<a href="https://kennethbunker.github.io/columns"> here</a> to see 500+ columns I have written.</p>
 
 <p>This is my <a href="https://scholar.google.cl/citations?user=kFHaW6wAAAAJ&hl=en">Google Scholar</a> profile.</p>
 
