--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ mark {
 </figure>
 <p>I am an academic, a consultant and a columnist. I am an associate professor and director of the Democracy and Government Lab at the Economics Department of San Sebastian University. I also contribute to several organizations that provide discrete, reliable solutions to investors, stakeholders and politicians worldwide.</p>
 
-<p>My<a href="https://kennethbunker.github.io/columns"> 500+ columns</a>.</p>
+<p>Check out my<a href="https://kennethbunker.github.io/columns"> 500+ columns</a>.</p>
 
 <p>This is my <a href="https://scholar.google.cl/citations?user=kFHaW6wAAAAJ&hl=en">Google Scholar</a> profile.</p>
 
