--- a/columns/index.html
+++ b/columns/index.html
@@ -119,7 +119,8 @@ mark {
 <hr>
 <ul>
 
-<li>20240525 - Dos estilos</li>
+<li>20240529 - Predicarle al coro</li>
+<li>20240525 - Dos estilos, un destino</li>
 <li>20240521 - Fin al lanza internacional </li>
 <li>20240517 - Desestabilizar para avanzar</li>
 <li>20240508 - Punto de inflexión</li>  
