--- a/columns/index.html
+++ b/columns/index.html
@@ -118,7 +118,7 @@ mark {
 <p><a href="https://www.lun.com"><em>Las Últimas Noticias</em></a> <a href="https://kennethbunker.github.io/lun"> <mark style="background: yellow">[IN PRINT!]</mark></a></p>
 <hr>
 <ul>
-
+<li>20240602 - Decisión salomónica</li>
 <li>20240529 - Predicarle al coro</li>
 <li>20240525 - Dos estilos, un destino</li>
 <li>20240521 - Fin al lanza internacional </li>
@@ -448,6 +448,7 @@ mark {
 <p><a href="https://www.ex-ante.cl"><em>Ex-Ante</em></a></p>
 <hr>
 <ul>
+<li>20240602 - Boric y la “normalización”: crear la enfermedad para vender el remedio</li>
 <li>20240524 - Todas las cartas sobre la mesa, cerrar los ojos y esperar el impacto</li>
 <li>20240517 - Epifanía de un gobierno que se acaba</li>
 <li>20240510 - Incentivos y magia en el ciclo económico</li>
