--- a/lun/index.html
+++ b/lun/index.html
@@ -99,7 +99,7 @@ gap: 5px;
 <img src="/img/lun/20240525.jpeg">
 <img src="/img/lun/20240529.jpeg">
 <img src="/img/lun/20240602.jpeg">
-<img src="/img/lun/20180307.jpeg">
+<img src="/img/lun/blanco.jpeg">
 <img src="/img/lun/20180312.jpeg">
 </div>
 
