--- a/covers/index.html
+++ b/covers/index.html
@@ -91,6 +91,7 @@ gap: 5px;
 <div class="img-container">
     <img src="/img/20231110%20-%20LUN.png">
     <img src="/img/20240207%20-%20LUN.png">
+    <img src="/img/lun/blanco.jpeg">
 </div>
 
 <div class="img-container">
