--- a/covers/index.html
+++ b/covers/index.html
@@ -201,7 +201,8 @@ gap: 5px;
 
 <div class="img-container">
         <img src="/img/20200323%20-%20La%20Segunda.png"> 
-        <img src="/img/20170725%20-%20La%20Segunda.png"> 
+        <img src="/img/20170725%20-%20La%20Segunda.png">
+        <img src="/img/lun/blanco.jpeg"> 
 </div>
 
 <h3 id="on-the-front-page">El Mercurio de Valparaíso</h3>
