--- a/covers/index.html
+++ b/covers/index.html
@@ -90,7 +90,7 @@ gap: 5px;
 
 <div class="img-container">
     <img src="/img/20231110%20-%20LUN.png">
-    <img src="/img/20240207%20-%20LUN.png">
+    <img src="/img/lun/blanco.jpeg">
     <img src="/img/lun/blanco.jpeg">
 </div>
 
