--- a/interviews/index.html
+++ b/interviews/index.html
@@ -169,6 +169,9 @@
 </li>
 <li><strong>El Muro</strong>. <a href="http://elmuro.cl/kenneth-bunker-los-votantes-de-pinera-son-de-pinera-no-son-votantes/elmuro/2017-10-03/131915.html">Kenneth Bunker: “Los votantes de Piñera son de Piñera, no son votantes de derecha”.</a> 3 October, 2017.
 </li>
+
+<li><strong>Diario Financiero</strong>. <a href="https://diariofinanciero.cl">Kenneth Bunker, cientista político Universidad Diego Portales: "Se sabe que Bachelet será presidenta, la pregunta es si logrará los doblajes".</a> 21 August, 2013.</li>
+
 </ul>
 
 <hr>
