--- a/covers/index.html
+++ b/covers/index.html
@@ -115,40 +115,46 @@ gap: 5px;
     <img src="/img/lun/blanco.jpeg">
 </div>
 
+ <div class="img-container">
+   <img src="/img/20240424%20-%20La%20Segunda.png"> 
+    <img src="/img/lun/blanco.jpeg">
+    <img src="/img/lun/blanco.jpeg">
+</div>
+
 <div class="img-container">
-    <img src="/img/20240424%20-%20La%20Segunda.png"> 
     <img src="/img/20231201%20-%20La%20Segunda.png"> 
     <img src="/img/20231212%20-%20La%20Segunda.png"> 
+    <img src="/img/20231221%20-%20La%20Segunda.png"> 
 </div>
 
 <div class="img-container">
-    <img src="/img/20231221%20-%20La%20Segunda.png"> 
     <img src="/img/20231013%20-%20La%20Segunda.png"> 
     <img src="/img/20230718%20-%20La%20Segunda.png"> 
+    <img src="/img/20230720%20-%20La%20Segunda.png"> 
 </div>
 
 <div class="img-container">
-    <img src="/img/20230720%20-%20La%20Segunda.png"> 
     <img src="/img/20230504%20-%20La%20Segunda.png">
     <img src="/img/20230508%20-%20La%20Segunda.png"> 
+    <img src="/img/20210301%20-%20La%20Segunda.png">
 </div>
 
 <div class="img-container">
-    <img src="/img/20210301%20-%20La%20Segunda.png">
     <img src="/img/20230413%20-%20La%20Segunda.png"> 
     <img src="/img/20230410%20-%20La%20Segunda.png"> 
+    <img src="/img/20230420%20-%20La%20Segunda.png">
 </div>
 
 <div class="img-container">
-    <img src="/img/20230420%20-%20La%20Segunda.png">
     <img src="/img/20230313%20-%20La%20Segunda.png"> 
     <img src="/img/20230223%20-%20La%20Segunda.png"> 
+    <img src="/img/20230207%20-%20La%20Segunda.png">
 </div>
 
 <div class="img-container">
-    <img src="/img/20230207%20-%20La%20Segunda.png">
     <img src="/img/20221226%20-%20La%20Segunda.png"> 
     <img src="/img/20221220%20-%20La%20Segunda.png"> 
+    <img src="/img/20210419%20-%20La%20Segunda.png">
 </div>
 
 <div class="img-container">
@@ -158,51 +164,51 @@ gap: 5px;
 </div>
 
 <div class="img-container">
-    <img src="/img/20210419%20-%20La%20Segunda.png">
     <img src="/img/20220711%20-%20La%20Segunda.png"> 
     <img src="/img/20220418%20-%20La%20Segunda.png"> 
+    <img src="/img/20220618%20-%20La%20Segunda.png">
 </div>
 
 <div class="img-container">
-    <img src="/img/20220618%20-%20La%20Segunda.png">
     <img src="/img/20220411%20-%20La%20Segunda.png"> 
     <img src="/img/20220406%20-%20La%20Segunda.png"> 
+    <img src="/img/20211213%20-%20La%20Segunda.png">
 </div>
 
 <div class="img-container">
-    <img src="/img/20211213%20-%20La%20Segunda.png">
     <img src="/img/20211130%20-%20La%20Segunda.png"> 
     <img src="/img/20211124%20-%20La%20Segunda.png"> 
+    <img src="/img/20210719%20-%20La%20Segunda.png">    
 </div>
 
 <div class="img-container">
-    <img src="/img/20210719%20-%20La%20Segunda.png">    
     <img src="/img/20210806%20-%20La%20Segunda.png"> 
     <img src="/img/20211019%20-%20La%20Segunda.png"> 
+    <img src="/img/20211004%20-%20La%20Segunda.png">
 </div>
 
 <div class="img-container">
-    <img src="/img/20211004%20-%20La%20Segunda.png">
     <img src="/img/20210909%20-%20La%20Segunda.png"> 
     <img src="/img/20210824%20-%20La%20Segunda.png"> 
+    <img src="/img/20210922%20-%20La%20Segunda.png">
 </div>
 
 <div class="img-container">
-    <img src="/img/20210922%20-%20La%20Segunda.png">
     <img src="/img/20210924%20-%20La%20Segunda.png"> 
     <img src="/img/20210927%20-%20La%20Segunda.png"> 
+    <img src="/img/20210905%20-%20La%20Segunda.png">
 </div>
 
 <div class="img-container">
-    <img src="/img/20210905%20-%20La%20Segunda.png">
     <img src="/img/20210301%20-%20La%20Segunda.png"> 
     <img src="/img/20211203%20-%20La%20Segunda.png"> 
+    <img src="/img/20210427%20-%20La%20Segunda.png">
 </div>
 
 <div class="img-container">
-    <img src="/img/20210427%20-%20La%20Segunda.png">
     <img src="/img/20200323%20-%20La%20Segunda.png"> 
     <img src="/img/20170725%20-%20La%20Segunda.png">
+    <img src="/img/20160212%20-%20La%20Segunda.png">
 </div>
 
 <h3 id="on-the-front-page">El Mercurio de Valparaíso</h3>
