--- a/lun/index.html
+++ b/lun/index.html
@@ -100,7 +100,7 @@ gap: 5px;
 <img src="/img/lun/20240529.jpeg">
 <img src="/img/lun/20240602.jpeg">
 <img src="/img/lun/20240604.jpeg">
-<img src="/img/lun/blanco.jpeg">
+<img src="/img/lun/20240610.jpeg">
 </div>
 
 <div class="img-container">
