--- a/columns/index.html
+++ b/columns/index.html
@@ -118,6 +118,7 @@ mark {
 <p><a href="https://www.lun.com"><em>Las Últimas Noticias</em></a> <a href="https://kennethbunker.github.io/lun"> <mark style="background: yellow">[IN PRINT!]</mark></a></p>
 <hr>
 <ul>
+<li>20240610 - Cuenta regresiva</li>
 <li>20240604 - Ponzi político</li>
 <li>20240602 - Decisión salomónica</li>
 <li>20240529 - Predicarle al coro</li>
@@ -449,6 +450,7 @@ mark {
 <p><a href="https://www.ex-ante.cl"><em>Ex-Ante</em></a></p>
 <hr>
 <ul>
+<li>20240609 - Promesas vacías, coherencia política y normalización por defecto</li>
 <li>20240602 - Boric y la “normalización”: crear la enfermedad para vender el remedio</li>
 <li>20240524 - Todas las cartas sobre la mesa, cerrar los ojos y esperar el impacto</li>
 <li>20240517 - Epifanía de un gobierno que se acaba</li>
