--- a/press/index.html
+++ b/press/index.html
@@ -124,8 +124,7 @@
 
 <li><strong>Deutsche Welle</strong>. <a href="https://www.dw.com/es/civiles-y-ffaa-en-chile-la-lucha-por-superar-la-dictadura/a-66748430">Civiles y FFAA en Chile: la lucha por superar la dictadura.</a> 11 September, 2023.</li>
 
-<li><strong>La Nación</strong>. <a href="https://www.lanacion.com.ar/agencias/chile-recuerda-los-50-anos-del-golpe-militar-de-pinochet-con-heridas-abiertas-y-sin-consenso-nid11092023/
-">Chile recuerda los 50 años del golpe militar de Pinochet con heridas abiertas y sin consenso.</a> 11 September, 2023.</li>
+<li><strong>La Nación</strong>. <a href="https://www.lanacion.com.ar/agencias/chile-recuerda-los-50-anos-del-golpe-militar-de-pinochet-con-heridas-abiertas-y-sin-consenso-nid11092023/">Chile recuerda los 50 años del golpe militar de Pinochet con heridas abiertas y sin consenso.</a> 11 September, 2023.</li>
 
 <li><strong>Americas Quarterly</strong>. <a href="https://americasquarterly.org/article/a-last-hope-for-chiles-new-constitution/">A Last Hope for Chile’s New Constitution?.</a> 11 August, 2023.</li>
 
@@ -639,9 +638,9 @@
 </li>
 <li><strong>La Diaria Uruguay</strong>. <a href="https://ladiaria.com.uy/politica/articulo/2021/5/chile-elige-una-convencion-constitucional-en-el-peor-momento-para-el-gobierno-de-pinera/">Chile elige una convención constitucional en el peor momento para el gobierno de Piñera.</a> 8 may, 2021.
 </li>
-<li><strong>La Nación</strong>. <a href="https://www.nacion.com/cables/chile-acudira-a-las-urnas-con-la-esperanza-de/BFFBAYI4TZH2JALWD3BQE3FN34/story/">Chilenos acudirán a las urnas con la esperanza de construir nuevo pacto social.</a> 8 may, 2021.
+<li><strong>La Nación</strong>. <a href="https://www.nacion.com/cables/chile-acudira-a-las-urnas-con-la-esperanza-de/BFFBAYI4TZH2JALWD3BQE3FN34/story/">Chilenos acudirán a las urnas con la esperanza de construir nuevo pacto social.</a> 8 May, 2021.
 </li>
-<li><strong>Swissinfo</strong>. <a href="https://www.swissinfo.ch/spa/chile-acudir%C3%A1-a-las-urnas-con-la-esperanza-de-construir-nuevo-pacto-social/46602050">Chile acudirá a las urnas con la esperanza de construir nuevo pacto social.</a> 8 may, 2021.
+<li><strong>Swissinfo</strong>. <a href="https://www.swissinfo.ch/spa/chile-acudir%C3%A1-a-las-urnas-con-la-esperanza-de-construir-nuevo-pacto-social/46602050">Chile acudirá a las urnas con la esperanza de construir nuevo pacto social.</a> 8 May, 2021.
 </li>
 <li><strong>El Periscopo</strong>. <a href="https://www.elperiscopio.cl/destacado-1/prensa-argentina-califico-a-pamela-jiles-de-populista-y-la-comparo-con-donald-trump/">Prensa argentina calificó a Pamela Jiles de &quot;populista&quot; y la comparó con Donald Trump.</a> 7 may, 2021.
 </li>
