--- a/columns/index.html
+++ b/columns/index.html
@@ -450,6 +450,8 @@ mark {
 <p><a href="https://www.ex-ante.cl"><em>Ex-Ante</em></a></p>
 <hr>
 <ul>
+<li>20240623 - Plan Z</li>
+<li>20240616 - La tormenta perfecta: Berlín, Estocolmo, Madrid y Cabo del Espíritu Santo</li>
 <li>20240609 - Promesas vacías, coherencia política y normalización por defecto</li>
 <li>20240602 - Boric y la “normalización”: crear la enfermedad para vender el remedio</li>
 <li>20240524 - Todas las cartas sobre la mesa, cerrar los ojos y esperar el impacto</li>
