--- a/covers/index.html
+++ b/covers/index.html
@@ -213,6 +213,10 @@ gap: 5px;
     <img src="/img/20210411%20-%20MercurioValpo.png"> 
 </div>
 
+<div class="img-container">
+    <img src="/img/20240623%20-%20MercurioValpo.png"> 
+</div>
+
 <h3 id="on-the-front-page">El Mercurio</h3>
 
 <div class="img-container">
@@ -239,8 +243,13 @@ gap: 5px;
 <div class="img-container">
     <img src="/img/20210411%20-%20El_Sur.png"> 
     <img src="/img/20240414%20-%20El_Sur.png"> 
+    <img src="/img/20240623%20-%20El_Sur.png">
+</div>
+
+<div class="img-container">
     <img src="/img/20160522%20-%20El_Centro.png">
 </div>
+
 
 <div class="img-container">
     <img src="/img/20210411%20-%20Estrella_Iquique.png"> 
