--- a/covers/index.html
+++ b/covers/index.html
@@ -229,6 +229,10 @@ gap: 5px;
 <div class="img-container">
     <img src="/img/20211212%20-%20AustralValdivia.png"> 
     <img src="/img/20211212%20-%20El_Llanquihue.png"> 
+</div>
+
+<div class="img-container">
+    <img src="/img/20240623%20-%20MercurioCalama.png">
     <img src="/img/20211212%20-%20MercurioCalama.png">
 </div>
 
