--- a/covers/index.html
+++ b/covers/index.html
@@ -262,9 +262,13 @@ gap: 5px;
 
 
 <div class="img-container">
-    <img src="/img/20240414%20-%20El%20Mercurio%20de%20Antofagasta.png">
     <img src="/img/20240414%20-%20Diario%20Llanquihue.png"> 
     <img src="/img/20240414%20-%20Diario%20de%20Atacama.png">
+</div>
+
+<div class="img-container">
+    <img src="/img/20240623%20-%20El%20Mercurio%20de%20Antofagasta.png">
+    <img src="/img/20240414%20-%20El%20Mercurio%20de%20Antofagasta.png">
 </div>
 
 
