--- a/covers/index.html
+++ b/covers/index.html
@@ -234,6 +234,7 @@ gap: 5px;
 <div class="img-container">
     <img src="/img/20240623%20-%20MercurioCalama.png">
     <img src="/img/20211212%20-%20MercurioCalama.png">
+    <img src="/img/20240414%20-%20El%20Mercurio%20de%20Calama.png"> 
 </div>
 
 
@@ -243,6 +244,11 @@ gap: 5px;
     <img src="/img/20240414%20-%20AustralOsorno.png"> 
 </div>
 
+<div class="img-container">
+    <img src="/img/20240623%20-%20AustralOsorno.png"> 
+    <img src="/img/20240623_2%20-%20AustralOsorno.png">
+    <img src="/img/20240414%20-%20AustralOsorno_2.png">  
+</div>
 
 <div class="img-container">
     <img src="/img/20210411%20-%20El_Sur.png"> 
@@ -263,6 +269,11 @@ gap: 5px;
 
 <div class="img-container">
     <img src="/img/20240414%20-%20Diario%20Llanquihue.png"> 
+    <img src="/img/20240623%20-%20Diario%20Llanquihue.png"> 
+</div>
+
+<div class="img-container">
+    <img src="/img/20240623%20-%20Diario%20de%20Atacama.png">
     <img src="/img/20240414%20-%20Diario%20de%20Atacama.png">
 </div>
 
@@ -274,8 +285,7 @@ gap: 5px;
 
 <div class="img-container">
     <img src="/img/20240414%20-%20Austral%20de%20Valdivia.png"> 
-    <img src="/img/20240414%20-%20AustralOsorno_2.png"> 
-    <img src="/img/20240414%20-%20El%20Mercurio%20de%20Calama.png"> 
+    <img src="/img/20240623%20-%20Austral%20de%20Valdivia.png"> 
 </div>
 
 
