--- a/covers/index.html
+++ b/covers/index.html
@@ -215,13 +215,17 @@ gap: 5px;
 
 <div class="img-container">
     <img src="/img/20240623%20-%20MercurioValpo.png"> 
+    <img src="/img/lun/blanco.jpeg">
+    <img src="/img/lun/blanco.jpeg">
+
 </div>
 
 <h3 id="on-the-front-page">El Mercurio</h3>
 
 <div class="img-container">
     <img src="/img/20230208%20-%20El%20Mercurio.png"> 
-    <img src="/img/20210225%20-%20El%20Mercurio.png"> 
+    <img src="/img/20210225%20-%20El%20Mercurio.png">
+    <img src="/img/lun/blanco.jpeg">
 </div>
 
 <h3 id="on-the-front-page">Regional</h3>
@@ -229,6 +233,7 @@ gap: 5px;
 <div class="img-container">
     <img src="/img/20211212%20-%20AustralValdivia.png"> 
     <img src="/img/20211212%20-%20El_Llanquihue.png"> 
+    <img src="/img/lun/blanco.jpeg">
 </div>
 
 <div class="img-container">
