--- a/covers/index.html
+++ b/covers/index.html
@@ -239,7 +239,7 @@ gap: 5px;
 <div class="img-container">
     <img src="/img/20240623%20-%20MercurioCalama.png">
     <img src="/img/20211212%20-%20MercurioCalama.png">
-    <img src="/img/20240414%20-%20El%20Mercurio%20de%20Calama.png"> 
+    <img src="/img/20240414%20-%2020MercurioCalama.png"> 
 </div>
 
 
@@ -263,34 +263,41 @@ gap: 5px;
 
 <div class="img-container">
     <img src="/img/20160522%20-%20El_Centro.png">
+    <img src="/img/lun/blanco.jpeg">
+    <img src="/img/lun/blanco.jpeg">
 </div>
 
 
 <div class="img-container">
     <img src="/img/20210411%20-%20Estrella_Iquique.png"> 
     <img src="/img/20211215%20-%20La_Discusion.png"> 
+    <img src="/img/lun/blanco.jpeg">
 </div>
 
 
 <div class="img-container">
     <img src="/img/20240414%20-%20Diario%20Llanquihue.png"> 
     <img src="/img/20240623%20-%20Diario%20Llanquihue.png"> 
+    <img src="/img/lun/blanco.jpeg">
 </div>
 
 <div class="img-container">
     <img src="/img/20240623%20-%20Diario%20de%20Atacama.png">
     <img src="/img/20240414%20-%20Diario%20de%20Atacama.png">
+    <img src="/img/lun/blanco.jpeg">
 </div>
 
 <div class="img-container">
     <img src="/img/20240623%20-%20El%20Mercurio%20de%20Antofagasta.png">
     <img src="/img/20240414%20-%20El%20Mercurio%20de%20Antofagasta.png">
+    <img src="/img/lun/blanco.jpeg">
 </div>
 
 
 <div class="img-container">
     <img src="/img/20240414%20-%20Austral%20de%20Valdivia.png"> 
     <img src="/img/20240623%20-%20Austral%20de%20Valdivia.png"> 
+    <img src="/img/lun/blanco.jpeg">
 </div>
 
 
