--- a/covers/index.html
+++ b/covers/index.html
@@ -239,7 +239,7 @@ gap: 5px;
 <div class="img-container">
     <img src="/img/20240623%20-%20MercurioCalama.png">
     <img src="/img/20211212%20-%20MercurioCalama.png">
-    <img src="/img/20240414%20-%2020MercurioCalama.png"> 
+    <img src="/img/20240414%20-%20MercurioCalama.png"> 
 </div>
 
 
@@ -251,7 +251,7 @@ gap: 5px;
 
 <div class="img-container">
     <img src="/img/20240623%20-%20AustralOsorno.png"> 
-    <img src="/img/20240623_2%20-%20AustralOsorno.png">
+    <img src="/img/20240623%20-%20AustralOsorno_2.png">
     <img src="/img/20240414%20-%20AustralOsorno_2.png">  
 </div>
 
