--- a/lun/index.html
+++ b/lun/index.html
@@ -91,6 +91,19 @@ gap: 5px;
 
 
 <div class="img-container">
+<img src="/img/lun/20240625.jpeg">
+<img src="/img/lun/blanco.jpeg">
+<img src="/img/lun/blanco.jpeg">
+<img src="/img/lun/blanco.jpeg">
+<img src="/img/lun/blanco.jpeg">
+<img src="/img/lun/blanco.jpeg">
+<img src="/img/lun/blanco.jpeg">
+<img src="/img/lun/blanco.jpeg">
+<img src="/img/lun/blanco.jpeg">
+<img src="/img/lun/blanco.jpeg">
+</div>
+
+<div class="img-container">
 <img src="/img/lun/20240418.jpeg">
 <img src="/img/lun/20240419.jpeg">
 <img src="/img/lun/20240423.jpeg">
